<resources>
    <string name="app_name">ExamHelper</string>
    <string name="input_number">请输入手机号码</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注册</string>
    <string name="choose">请选择你的科目</string>
    <string name="loginPhone">手机号码</string>
    <string name="password">密码</string>

    <string name="cllection">收藏</string>
    <string name="up">上一题</string>
    <string name="next">下一题</string>
    <string name="one">单选题</string>
    <string name="multi">多选题</string>
    <string name="select">您给出的回答选项？</string>

    <string name="exam">模拟测验</string>
    <string name="answer">答题模式</string>

    <string name="SequencePractice">顺序练习</string>
    <string name="SimulationTest">模拟考试</string>
    <string name="RondomPratice">随机练习</string>
    <string name="SpecialExamination">专项考试</string>
    <string name="WrongBook">错题本</string>
    <string name="MyCollection">我的收藏</string>
    <string name="simulation_test">模拟测验</string>
    <string name="patterns_of_anwser">答题模式</string>
    <string name="random_practice">随机联系</string>
    <string name="special_test">专项考试</string>
    <string name="my_collections">我的收藏</string>
    <string name="wrong_topic">错题本</string>


</resources>
